@@ -1,3 +1,5 @@
 [B]Version 1.1.6[/B]
 Added keyword alphabetical sorting
 Added Netflixporno
+Fix Streamate listing
+Fixed amateurcool
